# screen-cap

./: Cargo.toml  README.md
.github/workflows/: Release.yaml
src/: main.rs
