[package]
name = "screen-cap"
version = "0.1.5"
edition = "2021"

[dependencies]
xcap = "0.3.1"
image = { version = "0.25", default-features = false, features = ["webp"] }
chrono = "0.4.31"
clap = { version = "4.5.29", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9", features = ["vendored"] }
percent-encoding = "2.3"
xcb = { version = "1.5", features = ["randr"] }

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "1.1"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Devices_Display",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Xps",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
] }